syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "CareerCloud.gRPC.Protos";
package CareerCloud.gRPC;

service ApplicantEducation{
	rpc GetApplicantEducation(AppEduIdRequest) returns (AppEduProto);
    rpc GetAllApplicantEducation(google.protobuf.Empty) returns (AppEduArray);
	rpc CreateApplicantEducation(AppEduArray) returns (google.protobuf.Empty);
	rpc UpdateApplicantEducation(AppEduArray) returns (google.protobuf.Empty);
	rpc DeleteApplicantEducation(AppEduArray) returns (google.protobuf.Empty);
}

message AppEduIdRequest{
	string Id = 1;
}

message AppEduProto{
	 string Id = 1;
     string Applicant = 2;
     string Major = 3;
     string CertificateDiploma =4;
     google.protobuf.Timestamp StartDate = 5;
     google.protobuf.Timestamp CompletionDate = 6;
     int32 CompletionPercent = 7;
}
message AppEduArray{
	repeated AppEduProto AppEdu = 1;
}